# rust-smaz

./: .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yml  lint.yml
src/: lib.rs
